# conventional-changelog-emoji-config

./: LICENSE  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.config/: codeclimate.yml  variables.json  yamllint.yml
.config/docs/: package.json  pyproject.toml
.config/taskfiles/git/: Taskfile.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: BugReport.yml  FeatureRequest.yml  SupportRequest.yml  config.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/partials/: guide.md
local/: package-lock.json
local/slim/: exe.txt  install.txt
src/: commit-types.ts  customConfig.ts  handleWriterOpts.ts  main.test.ts  main.ts  parser-opts.ts  utils.ts
src/transformer/: index.test.ts  index.ts  scopeMapDisplayName.test.ts  scopeMapDisplayName.ts  typeDisplayName.test.ts  typeDisplayName.ts
src/types/: better-than-before.d.ts  conventional-changelog-core.d.ts  git-dummy-commit.d.ts
src/utils/: conventional-changelog.ts  conventional-recommended-bump.ts  git-raw-commit.ts  parserOpts.ts  writerOpts.ts
